# LEAP

./: CHANGELOG.md  Makefile  pyproject.toml  requirements.txt  requirements_freeze.txt
.github/workflows/: pytest-standard-fast.yml
examples/: random_walk_vs_ea.ipynb
examples/multi_objective/: multiobjective_zdt.ipynb
leap_ec/: algorithm.py  decoder.py  probe.py  statistical_helpers.py
leap_ec/contrib/transfer/: PopulationSeedingRepertoire_example.ipynb
leap_ec/multiobjective/: README.md
leap_ec/real_rep/: ops.py  problems.py
tests/real_rep/: test_ops.py
